Buttons now correctly load lists, and slide to toggle features were adjusted to woork, the uncategorized list does not reload or reopen if collapsed and unchanged

--- a/styles/_lists-btns.scss
+++ b/styles/_lists-btns.scss
@@ -12,9 +12,9 @@
       transition: all ease 0.5s;
       opacity: 0;
       background-color: fade-out($primary, .1);
-      &:hover {
-        opacity: 1;
-      }
+      // &:hover {
+      //   opacity: 1;
+      // }
       .portfolio-item-caption-content {
         font-size: 1.5rem;
       }
